--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,48 +1,60 @@
-.layui-footer{
+
+.layui-footer {
     text-align: center;
     font-size: 12px;
-}
-.iconfont{
+  }
+  
+  .iconfont {
     margin-right: 8px;
-}
-.layui-icon{
+  }
+  
+  .layui-icon {
     margin-right: 8px;
     margin-left: 20px;
-}
-iframe {
+  }
+  
+  iframe {
     width: 100%;
     height: 100%;
-}
-.layui-body{
+  }
+  
+  .layui-body {
     overflow: hidden;
-}
-a {
-    transition: none!important;
-}
-.userinfo{
+  }
+  
+  a {
+    transition: none !important;
+  }
+  
+  .userinfo {
     height: 60px;
     line-height: 60px;
     text-align: center;
     font-size: 12px;
     user-select: none;
-}
-.layui-side-scroll{
-    border-bottom: 1px solid #000;
-}
-.layui-nav-img{
+  }
+  
+  .layui-side-scroll .userinfo {
+    border-bottom: 1px solid #282b33;
+  }
+  
+  .layui-nav-img {
     width: 40px;
     height: 40px;
-}
-.text-avatar{
+  }
+  
+  .text-avatar {
     display: inline-block;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
     background-color: #009688;
-    text-align: center;
+    border-radius: 50%;
     line-height: 40px;
-    color: #fff;
+    text-align: center;
     font-size: 20px;
-    vertical-align: middle;
+    color: #fff;
+    position: relative;
+    top: 4px;
     margin-right: 10px;
-}
+  }
+  
